# AmPlanejamento

./: .env.example  .gitignore  CLAUDE.md  README.md  RECUPERACAO.md  fluxo-app.html  migration_alocacao_investimento_protecao.sql  migration_arquivo_hash.sql  migration_cadastro_campos.sql  migration_camada_negocio.sql  migration_categoria_icone.sql  migration_contas_cartoes_config.sql  migration_contexto_contas.sql  migration_contexto_pj.sql  migration_cor_marca_default.sql  migration_criterios_saude.sql  migration_crm_google.sql  migration_crm_perfil_plano.sql  migration_gestao_categorias.sql  migration_marca.sql  migration_meufuturo_metas.sql  migration_milhas_classe.sql  migration_orcamento_bens.sql  migration_orcamento_subcategoria.sql  migration_parcelas_previstas.sql  migration_projetos_conjuge.sql  migration_reativacao_cliente.sql  migration_rls_novas_tabelas.sql  migration_rls_tabelas_internas.sql  migration_seguranca.sql  migration_tarefas_cliente.sql  migration_tipo_investimento.sql  migration_transacao_atualizado_em.sql  migration_transacao_divida.sql  migration_vagas_planejador.sql  pyproject.toml  requirements-dev.txt  requirements.txt  schema_seguranca.sql  testar_pluggy.py
.github/workflows/: security.yml
app/: main.py
app/api/: deps.py
app/core/: config.py  planos.py  rate_limit.py  security.py  validacao.py
app/db/: base.py
app/integrations/: asaas.py  google_calendar.py  ocr_vision.py  openai_categorizador.py  pluggy.py  regras_categoria.py  supabase_storage.py
app/jobs/: faturamento.py
app/models/: __init__.py  admin.py  assinatura.py  categoria.py  cliente.py  conta_conectada.py  crm.py  despesa_operacional.py  fatura.py  importacao_extrato.py  (+6 more)
docs/: google-agenda-setup.md
frontend/: index.html  package-lock.json  package.json  vercel.json
scripts/: backup_banco.sh
tests/: test_isolamento_negocio.py
(+178 files in other folders)
